DR2-1760 Add new indexed fields.
This looks like a lot but there's some bits I should have done initially
that I've tidied up here.

* The database builder will now write null, mapped to `Option` if a value
  is missing instead of empty string
* The webapp now has a get endpoint for search results with query
  parameters. The form POST just redirects to that.
* It now deletes and recreates the rows each time. This will allow us to
  handle updates.
* I've added the new fields which was the original intention.
* I've experimented a bit with property based testing with Scalacheck
  where we generate case classes with random data and see if they all
  pass.
* Some of the logging config was broken/annoying.

--- a/disaster-recovery-webapp/src/main/twirl/search.scala.html
+++ b/disaster-recovery-webapp/src/main/twirl/search.scala.html
@@ -4,19 +4,11 @@
     <h1 class="govuk-heading-l">Search for a file</h1>
     <form method="post" action="/search">
         <div class="govuk-form-group">
-            <h1 class="govuk-label-wrapper">
-                <label class="govuk-label govuk-label--s" for="id">
-                    Asset ID
-                </label>
-            </h1>
-            <input  class="govuk-input" id="id" name="id" type="text"/>
-
-            <h1 class="govuk-label-wrapper">
-                <label class="govuk-label govuk-label--s" for="zref">
-                    ZRef
-                </label>
-            </h1>
-            <input class="govuk-input" id="zref" name="zref" type="text"/>
+            @input("id", "Asset ID")
+            @input("zref", "ZRef")
+            @input("sourceId", "Source ID")
+            @input("citation", "Neutral Citation")
+            @date("Ingest date", "ingest-date")
         </div>
         <button class="govuk-button" type="submit">Search</button>
     </form>
