--- a/disaster-recovery-webapp/src/main/twirl/results.scala.html
+++ b/disaster-recovery-webapp/src/main/twirl/results.scala.html
@@ -1,4 +1,6 @@
 @import uk.gov.nationalarchives.utils.Utils.OcflFile
+@import java.time.{ZonedDateTime, ZoneOffset}
+@import java.time.format.DateTimeFormatter
 @(files: List[OcflFile])
 
 @main("Results") {
@@ -7,6 +9,9 @@
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
                 <th scope="col" class="govuk-table__header">Name</th>
+                <th scope="col" class="govuk-table__header">ZRef</th>
+                <th scope="col" class="govuk-table__header">Ingest Date</th>
+                <th scope="col" class="govuk-table__header">Citation</th>
                 <th scope="col" class="govuk-table__header"></th>
             </tr>
         </thead>
@@ -14,6 +19,9 @@
             @for(file <- files) {
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">@file.fileName</th>
+                    <td class="govuk-table__cell">@file.zref</td>
+                    <td class="govuk-table__cell govuk-!-width-one-quarter">@file.ingestDateTime.map(date => ZonedDateTime.ofInstant(date, ZoneOffset.UTC).format(DateTimeFormatter.ISO_LOCAL_DATE)).getOrElse("")</td>
+                    <td class="govuk-table__cell">@file.citation</td>
                     <td class="govuk-table__cell">
                         <a class="govuk-link" href="/download/@file.fileId" download="@file.fileName">Download</a>
                     </td>
