--- a/disaster-recovery-webapp/src/main/twirl/search.scala.html
+++ b/disaster-recovery-webapp/src/main/twirl/search.scala.html
@@ -8,7 +8,7 @@
             @input("zref", "ZRef")
             @input("sourceId", "Source ID")
             @input("citation", "Neutral Citation")
-            @date("Ingest date", "ingest-date")
+            @date("Ingest Date", "ingest-date")
         </div>
         <button class="govuk-button" type="submit">Search</button>
     </form>
