consignemnet ref field in the UI

--- a/custodial-copy-webapp/src/main/twirl/search.scala.html
+++ b/custodial-copy-webapp/src/main/twirl/search.scala.html
@@ -9,6 +9,7 @@
             @input("sourceId", "Source ID")
             @input("citation", "Neutral Citation")
             @date("Ingest Date", "ingest-date")
+            @input("consignmentRef", "Consignment Reference")
         </div>
         <button class="govuk-button" type="submit">Search</button>
     </form>
