--- a/custodial-copy-webapp/src/main/twirl/results.scala.html
+++ b/custodial-copy-webapp/src/main/twirl/results.scala.html
@@ -12,6 +12,7 @@
                 <th scope="col" class="govuk-table__header">ZRef</th>
                 <th scope="col" class="govuk-table__header">Ingest Date</th>
                 <th scope="col" class="govuk-table__header">Citation</th>
+                <th scope="col" class="govuk-table__header">Consignment Ref</th>
                 <th scope="col" class="govuk-table__header"></th>
             </tr>
         </thead>
@@ -22,6 +23,7 @@
                     <td class="govuk-table__cell">@file.zref</td>
                     <td class="govuk-table__cell govuk-!-width-one-quarter">@file.ingestDateTime.map(date => ZonedDateTime.ofInstant(date, ZoneOffset.UTC).format(DateTimeFormatter.ISO_LOCAL_DATE)).getOrElse("")</td>
                     <td class="govuk-table__cell">@file.citation</td>
+                    <td class="govuk-table__cell">@file.consignmentRef</td>
                     <td class="govuk-table__cell">
                         <a class="govuk-link" href="/download/@file.fileId" download="@file.fileName">Download</a>
                     </td>
