DR2-2696 Add code to webapp DB.
This adds the Code identifier to the database for the builder and the
reindexer and allows you to search it in the webapp.

--- a/custodial-copy-webapp/src/main/twirl/search.scala.html
+++ b/custodial-copy-webapp/src/main/twirl/search.scala.html
@@ -10,6 +10,7 @@
             @input("citation", "Neutral Citation")
             @date("Ingest Date", "ingest-date")
             @input("consignmentRef", "Consignment Reference")
+            @input("code", "Code")
         </div>
         <button class="govuk-button" type="submit">Search</button>
     </form>
